feature: adjust card layout in related products

--- a/store/blocks/desktop/components/header/searchbar.jsonc
+++ b/store/blocks/desktop/components/header/searchbar.jsonc
@@ -6,7 +6,8 @@
       "openAutocompleteOnFocus": true,
       "placeholder": "",
       "hasIconLeft": false,
-      "autocompleteFullWidth": true
+      "autocompleteFullWidth": true,
+      "containerMode": "container"
     }
   },
   "autocomplete-result-list.v2": {
