feature: adding desktop pdp layout

--- a/store/blocks/global/components/pdp/product-related-products.jsonc
+++ b/store/blocks/global/components/pdp/product-related-products.jsonc
@@ -3,7 +3,8 @@
     "title": "related products responsive container",
     "children": [
       "responsive-layout.phone#phone__shelfRelated_products",
-      "responsive-layout.tablet#tablet__shelfRelated_products"
+      "responsive-layout.tablet#tablet__shelfRelated_products",
+      "responsive-layout.desktop#tablet__shelfRelated_products"
     ],
     "props": {
       "blockClass": "shelf__related_products-container",
@@ -18,5 +19,9 @@
   "responsive-layout.tablet#tablet__shelfRelated_products": {
     "title": "related products tablet container",
     "children": ["flex-layout.row#tablet__shelfRelatedProducts-container"]
+  },
+  "responsive-layout.desktop#tablet__shelfRelated_products": {
+    "title": "related products desktop container",
+    "children": ["flex-layout.row#desktop__shelfRelatedProducts-container"]
   }
 }
