--- a/store/blocks/global/components/header/navbar-text.jsonc
+++ b/store/blocks/global/components/header/navbar-text.jsonc
@@ -56,7 +56,8 @@
   "rich-text#colombia__currency": {
     "title": "region colombia title",
     "props": {
-      "text": "Español Latinoamericano | COP"
+      "text": "Español Latinoamericano | COP",
+      "blockClass": "colombia__currency"
     }
   }
 }
