--- a/store/blocks/global/components/footer/footer-main_content.jsonc
+++ b/store/blocks/global/components/footer/footer-main_content.jsonc
@@ -12,7 +12,7 @@
       "flex-layout.row#footer__options",
       "flex-layout.col#trustpilot",
       "flex-layout.row#footer__partners",
-      "locale-switcher",
+      "flex-layout.row#footer__option_currency",
       "flex-layout.row#footer__copyright"
     ],
     "props": {
