--- a/store/blocks/desktop/components/header/searchbar.jsonc
+++ b/store/blocks/desktop/components/header/searchbar.jsonc
@@ -1,7 +1,7 @@
 {
   "search-bar#header__search": {
     "title": "searchbar",
-    "blocks": ["autocomplete-result-list.v2"],
+    "blocks": ["autocomplete-result-list.v2#desktop__search"],
     "props": {
       "openAutocompleteOnFocus": true,
       "placeholder": "",
@@ -10,7 +10,7 @@
       "containerMode": "container"
     }
   },
-  "autocomplete-result-list.v2": {
+  "autocomplete-result-list.v2#desktop__search": {
     "title": "search bar autocomplete",
     "blocks": ["product-summary"],
     "props": {
