fix: adjust drawer searchbar intelligent-search on desktop

--- a/store/blocks/desktop/components/header/navbar-section-options.jsonc
+++ b/store/blocks/desktop/components/header/navbar-section-options.jsonc
@@ -16,8 +16,8 @@
     "children": ["flex-layout.row#options__one"],
     "props": {
       "blockClass": "options__one-container",
-      "verticalAlign": "middle"
-      /* "width": "grow" */
+      "verticalAlign": "middle",
+      "width": "grow"
     }
   },
   "flex-layout.row#options__one": {
