--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,8 @@
     "vtex.product-price": "1.x",
     "vtex.store-icons": "0.x",
     "vtex.product-list": "0.x",
-    "vtex.checkout-summary": "0.x"
+    "vtex.checkout-summary": "0.x",
+    "itgloberspartnercl.whatsapp-button": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x"
