--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -4,18 +4,11 @@
     "children": [
       "responsive-layout.desktop#home__banner-desktop",
       "flex-layout.row#recommendations-shelf",
-      "whatsapp-button",
+      "whatsapp-button#desktop__whatsapp-button",
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
       "flex-layout.row#buy_now-shelf"
     ]
-  },
-  "whatsapp-button": {
-    "props": {
-      "logo": "assets/img/whatsapp.png",
-      "phone": "300506060",
-      "message": "VTEX university RLZ"
-    }
   }
 }
