--- a/store/blocks/mobile/screen/pdp.jsonc
+++ b/store/blocks/mobile/screen/pdp.jsonc
@@ -1,6 +1,9 @@
 {
   "responsive-layout.mobile#mobile__pdp": {
     "title": "mobile pdp layout",
-    "children": ["flex-layout.row#mobile__pdp"]
+    "children": [
+      "flex-layout.row#mobile__pdp",
+      "whatsapp-button#tablet__whatsapp-button"
+    ]
   }
 }
