--- a/store/blocks/tablet/screen/contact_us.jsonc
+++ b/store/blocks/tablet/screen/contact_us.jsonc
@@ -1,5 +1,9 @@
 {
   "responsive-layout.tablet#contact_us": {
-    "children": ["flex-layout.row#tablet__contact_us-container"]
+    "title": "contact us responsive tablet",
+    "children": [
+      "flex-layout.row#tablet__contact_us-container",
+      "whatsapp-button#tablet__whatsapp-button"
+    ]
   }
 }
