--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -5,6 +5,7 @@
       "responsive-layout.phone#home__banner-phone",
       "flex-layout.row#popular_cards",
       "flex-layout.row#recommendations-shelf",
+      "whatsapp-button#phone__whatsapp-button",
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
