--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -4,6 +4,7 @@
     "children": [
       "responsive-layout.tablet#home__banner-tablet",
       "flex-layout.row#recommendations-shelf",
+      "whatsapp-button#tablet__whatsapp-button",
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
