feature: setting list context bullet group custom component in all resolutions

--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -8,7 +8,8 @@
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
-      "flex-layout.row#buy_now-shelf"
+      "flex-layout.row#buy_now-shelf",
+      "list-context.bullet-group"
     ]
   }
 }
