--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,8 @@
     "vtex.store-icons": "0.x",
     "vtex.product-list": "0.x",
     "vtex.checkout-summary": "0.x",
-    "itgloberspartnercl.whatsapp-button": "0.x"
+    "itgloberspartnercl.whatsapp-button": "0.x",
+    "itgloberspartnercl.bullets-diagramation": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x"
