--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -8,7 +8,75 @@
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
-      "flex-layout.row#buy_now-shelf"
+      "flex-layout.row#buy_now-shelf",
+      "list-context.bullet-group"
     ]
+  },
+  "list-context.bullet-group": {
+    "children": ["slider-layout#bullet__group"],
+    "title": "custom bullet",
+    "props": {
+      "bullets": [
+        {
+          "image": "assets/svg/home/action.svg",
+          "titleBullet": "Acción",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/adventure.svg",
+          "titleBullet": "Aventuras",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/fps.svg",
+          "titleBullet": "FPS/TPS",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/rpg.svg",
+          "titleBullet": "RPG",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/indie.svg",
+          "titleBullet": "Indie",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/simulation.svg",
+          "titleBullet": "Simulación",
+          "link": {
+            "url": "/"
+          }
+        },
+        {
+          "image": "assets/svg/home/strategy.svg",
+          "titleBullet": "Estrategia",
+          "link": {
+            "url": "/"
+          }
+        }
+      ]
+    }
+  },
+  "slider-layout#bullet__group": {
+    "props": {
+      "itemsPerPage": {
+        "desktop": 5,
+        "tablet": 5,
+        "mobile": 5
+      },
+      "infinite": true
+    }
   }
 }
