fix:whatsapp button size and fix login button on mobile

--- a/store/blocks/desktop/screen/whatsapp-button-layout.jsonc
+++ b/store/blocks/desktop/screen/whatsapp-button-layout.jsonc
@@ -4,7 +4,9 @@
     "props": {
       "logo": "assets/img/whatsapp.png",
       "phone": "300506060",
-      "message": "VTEX university RLZ"
+      "message": "VTEX university RLZ",
+      "width": 40,
+      "height": 40
     }
   }
 }
