feature:clean code improve styles on add to cart info custom component

--- a/store/blocks/desktop/components/pdp/modal-add-to-cart-info.jsonc
+++ b/store/blocks/desktop/components/pdp/modal-add-to-cart-info.jsonc
@@ -1,23 +1,17 @@
 {
   "modal-trigger#desktop__product-add-to-cart-info": {
     "title": "modal trigger add to cart info",
-    "children": [
-      "rich-text#modal-trigger__add-to-cart-info",
-      "modal-layout#desktop__product-add-to-cart-info"
-    ],
+    "children": ["modal-layout#desktop__product-add-to-cart-info"],
     "props": {
       "customPixelEventName": "addToCart"
     }
   },
-  "rich-text#modal-trigger__add-to-cart-info": {
-    "title": "modal text",
-    "props": {
-      "text": "Click me"
-    }
-  },
   "modal-layout#desktop__product-add-to-cart-info": {
     "title": "modal layout add to cart info",
-    "children": ["modal-header#product-add-to-cart-info", "add-to-cart-info"]
+    "children": ["modal-header#product-add-to-cart-info", "add-to-cart-info"],
+    "props": {
+      "blockClass": "modal__add_to_cart_info"
+    }
   },
   "modal-header#product-add-to-cart-info": {
     "title": "modal header close",
