--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -9,7 +9,8 @@
       "flex-layout.row#gif_cards-shelf",
       "flex-layout.row#next_game-shelf",
       "flex-layout.row#buy_now-shelf",
-      "list-context.bullet-group"
+      "list-context.bullet-group",
+      "flex-layout.row#desktop__custom_search_bar"
     ]
   }
 }
