feature: adding quick-order container component, styles and improve readme

--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -4,6 +4,7 @@
     "children": [
       "responsive-layout.phone#home__banner-phone",
       "flex-layout.row#popular_cards",
+      "flex-layout.row#quick-order",
       "flex-layout.row#recommendations-shelf",
       "whatsapp-button#phone__whatsapp-button",
       "flex-layout.row#best_games-shelf",
